@@ -116,25 +116,26 @@
 
 	<h4>Credits</h4>
 	<p>Ken O. Burtch<br>
-        Ada Doom3 Team<br>
+    Ada Doom3 Team<br>
 	Buz Cory<br>
-        Christopher Meng<br>
+    Christopher Meng<br>
 	John Cusick<br>
 	Rob Vissers<br>
-        Terry Droeger<br>
+    Terry Droeger<br>
 	Thierry Thomas<br>
-        Zhu Qun-Ying</p>
+    Zhu Qun-Ying<br>
+    Mehdi Saada</p>
 
 	<h4>Thank You's</h4>
 	<p>Ada Core Technologies<br>
-        Aziza Abdel Naiem<br>
+    Aziza Abdel Naiem<br>
 	Chris Browne<br>
 	Chris F. A. Johnson<br>
 	David A. Wheeler<br>
 	Mel Wilson<br>
 	Oleksandr Havva<br>
 	Phil Snelgrove<br>
-        Vlad Soloviev<br>
+    Vlad Soloviev<br>
 	Warren W. Gay</p>
 
 			</td>
