@@ -66,3 +66,5 @@ CHANGES SINCE 2.1
 
 31. Change: affirm blocks run in restricted mode as a precaution against side-effects.
 
+32. Change: (Mehdi) Strings package now has more univeral parameters and return results to reduce type casting and to follow a similar design to the numerics package.
+
